--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -33,6 +33,6 @@
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
 
-    <extensions>
-    </extensions>
+    <!-- <extensions>
+    </extensions> -->
 </phpunit>
