--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,4 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="mysql://daniel.olivet:Malaga1997%2F%2F@127.0.0.1:3306/noob_db?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://daniel.olivet:Malaga1997%2F%2F@db:3306/noob_db?serverVersion=8&charset=utf8mb4"
