--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.15",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
+        "symfony/event-dispatcher": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/runtime": "5.4.*",
