--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,15 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    # Events Listeners
+    App\User\Domain\EventsListener\UserCreatedEventListener:
+        tags: 
+            - {
+                name: kernel.event_listener,
+                event: 'App\User\Domain\Events\UserCreatedEvent'
+            }
+
+    # Controllers
     App\User\Infrastructure\Controller\:
         resource: '../src/User/Infrastructure/Controller/'
         tags: ['controller.service_arguments']
