--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/event-dispatcher": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/mailer": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/uid": "5.4.*",
