feat: lexikjwt added & ssl keys generated

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,3 +23,6 @@
 
 # Docker
 docker/db_data/
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
