--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "lexik/jwt-authentication-bundle": "^2.19",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/event-dispatcher": "5.4.*",
