--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -2,8 +2,12 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
-user:
+user_create:
   path: /user/create
   controller: App\User\Infrastructure\Controller\CreateUserController
   methods: [ POST ]
 
+user_login:
+  path: /user/login
+  controller: App\User\Infrastructure\Controller\LoginUserController
+  methods: [ POST ]
