--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -26,3 +26,5 @@ docker/db_data/
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+config/jwt
