--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -40,6 +40,7 @@ security:
     access_control:
         - { path: ^/user/create, roles: PUBLIC_ACCESS }
         - { path: ^/user/login, roles: PUBLIC_ACCESS }
+        - { path: ^/book/create, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
