--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -20,29 +20,35 @@ security:
         app_user_provider:
             entity:
                 class: App\User\Domain\Entity\User
-                property: uuid
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        api_login:
+            pattern: ^/api/user/login
+            stateless: true
+            json_login:
+                check_path: /api/user/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+
         main:
             lazy: true
             provider: app_user_provider
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/user/create, roles: PUBLIC_ACCESS }
-        - { path: ^/user/login, roles: PUBLIC_ACCESS }
-        - { path: ^/book/create, roles: IS_AUTHENTICATED_FULLY }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/user/create, roles: PUBLIC_ACCESS }
+        - { path: ^/api/user/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/book/create, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
