--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -2,17 +2,20 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
+user_login_check:
+    path: /api/user/login_check
+
 user_create:
-  path: /user/create
+  path: /api/user/create
   controller: App\User\Infrastructure\Controller\CreateUserController
   methods: [ POST ]
 
 user_login:
-  path: /user/login
+  path: /api/user/login
   controller: App\User\Infrastructure\Controller\LoginUserController
   methods: [ POST ]
 
 book_create:
-  path: /book/create
+  path: /api/book/create
   controller: App\Book\Infrastructure\Controller\CreateBookController
   methods: [ POST ]
