--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -33,6 +33,7 @@ security:
                 check_path: /api/user/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                username_path: email
 
         api:
             pattern:   ^/api
